fix spacing in seasonal programs pages

--- a/themes/catching-the-spirit/sass/_content.scss
+++ b/themes/catching-the-spirit/sass/_content.scss
@@ -24,6 +24,11 @@ img {
     max-width: 100%;
 }
 
+// Container for white background text
+.text-container {
+    padding: 3%;
+}
+
 // Green box container
 .green-box {	
     background-color: $color__green;
