--- a/themes/catching-the-spirit/sass/_programs.scss
+++ b/themes/catching-the-spirit/sass/_programs.scss
@@ -20,18 +20,17 @@
             margin-bottom: 1.5rem;
         }
         ul {
-            list-style: disc inside none;
+            list-style: disc outside none;
             color: $color__green;
             font-weight: 100;
             text-align: left;
             line-height: 1.4;
-            padding: 0 15px;
+            padding: 0 1.5rem 0 2.5rem;
         }
         .for-youth-green {
             background: url('../../images/foryouthbyyouth_green.svg') no-repeat center center;
-            background-size: contain;
-            width: 95%;
-            height: 150px;
+            background-size: 80%;
+            height: 175px;
         }
         .green-box {
             padding: 2rem 2rem;
@@ -57,19 +56,26 @@
         .program-details-wrapper {
             display: flex;
             justify-content: space-around;
-            margin: 2rem 2rem 0 2rem;
+            margin: 0;
             .program-details-when,
             .program-details-where {
                 flex: 1 1 50%;
             }
         }
         a {
-            margin: 1.5rem;
+            margin: 2rem;
         }
         .register-btn {
             @extend .red-btn;
             text-transform: uppercase;
-            width: 50%;
+            margin-bottom: 2rem;
+            width: 86%;
+            @include desktop {
+                width: 50%;
+            }
+        }
+        .faq-parents {
+            margin-bottom: 0;
         }
     }
 }
